--- a/index.html
+++ b/index.html
@@ -15,11 +15,28 @@
 </head>
 
 <body>
-
+  <navbar>
+    <h1>Fun Bus</h1>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">About Us</a>
+      <a href="#">Blog</a>
+      <a href="#">Contact</a>
+    </nav>
+  </navbar>
   
-     
+
   <div class="container home">
-   
+
+    <header>
+        <div class="img-content"><img src="img/fun-bus.jpg" alt="Let's go on an adventure!"></div>
+        <h2>Welcome To Fun Bus!</h2>
+        <p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty 
+          <br> design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. <br> 
+          Adventure fun traveler pretty design website expedition.
+        </p>
+      </header>
+  
     <section class="content-section">
       <div class="text-content">
         <h2>Let's Go!</h2>
