--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
     <header>
         <div class="img-content"><img src="img/fun-bus.jpg" alt="Let's go on an adventure!"></div>
         <h2>Welcome To Fun Bus!</h2>
-        <p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty 
+        <div><p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty 
           <br> design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. <br> 
           Adventure fun traveler pretty design website expedition.
         </p>
+      </div>
       </header>
   
     <section class="content-section">
@@ -63,8 +64,8 @@
       <p>Expedition excursion design darn excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
       <img src="img/destination.jpg" alt="Second slide">
     </section>
-    <section class="content-pick">
 
+    <section class="content-pick">
       <div class="destination">
         <h4>Fun In The Sun</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
